# audri

./: .gitignore  AGENTS.md  LICENSE  README.md  foundation.org  justfile  pyproject.toml
.codex-zephyr-mlsys/: runtime.yaml
.codex-zephyr-mlsys/container_entrypoints/: llm_serving_overrides.txt  spack_owned_packages.conf  uv-install.sh
.codex-zephyr-mlsys/envs/: hf-datasets.yaml  hf-transformers.yaml  llm-serving-all.yaml  megatronlm.yaml  qwen3-tts.yaml  sglang.yaml  torchtitan.yaml  vllm.yaml
.codex-zephyr-mlsys/lib/: errors.sh
.codex-zephyr-mlsys/scripts/: parse-env-yaml.py  uv-env-activate.sh  uv-env-build.sh  uv-env-validate.sh
.sygaldry/zephyr/: Dockerfile.zephyr  README.md  VERSION  build_repo_image.sh  infra.yaml
.sygaldry/zephyr/container/: launch_container.sh  verify_uv_layering.sh  verify_uv_spack.py
.sygaldry/zephyr/container/entrypoints/: default.sh  hf-download.sh  hf-lora-setup.sh  nvidia_overrides.txt  run-job.sh  spack-build.sh  spack-install.sh  uv-install.sh  verify-gpu.sh  verify-spack.sh
.sygaldry/zephyr/container/lib/: spack_init.sh  test_primitives.sh  verify_common.sh
.sygaldry/zephyr/lib/: infra_config.sh  zephyr_job.sh
docker/: Dockerfile.audri-tts
scripts/: launch_mlsys_hf.sh  run_smoke_test.sh  run_speak_demo.sh  smoke_test_tts.py  speak_demo.py  zephyr_layer.sh  zephyr_policy_check.sh
src/audri/: speak_tool.py
src/audri/tts/: audio_egress.py  chunker.py  driver.py  session.py
